libtiled-java: Migrate from javax.xml.bind to jakarta.xml.bind (#4326)
* Migrate libtiled-java from javax.xml.bind to jakarta.xml.bind for Java 21 support
* Increase minimum supported version to Java 11
* AppVeyor: Use Java 21 since we dropped the default Java 8